--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@
         width: 100%;
       }
   
-      body{
-        background-image: url(./Imagens/DSCN1977.JPG)
+      header{
+        background-image: url(Imagens/DSCN1977.JPG)
       }
 
       .nav-list {
